--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,25 @@ body {
     text-wrap: balance;
   }
 }
+
+
+/* Custom scrollbar styles */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1f2937; /* dark gray background */
+  border-radius: 9999px; /* rounded corners */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4b5563; /* gray thumb */
+  border-radius: 9999px; /* rounded corners */
+  border: 3px solid #1f2937; /* padding around thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6b7280; /* lighter gray on hover */
+}
